3D view render. mesh data not updated. #35969

Closed
opened 2013-07-02 20:42:30 +02:00 by koil · 6 comments

%%%--- Operating System, Graphics card ---

Windows 7 64 bit home premium.
Nvidia geforce 9200.

- Blender version with error, and version that worked ---

Error: blender 2.68RC1 r57908 windows 64 bit.

- Short description of error ---

3D view render. mesh data not updated.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Default file.
Cube, edit mode, extrude a few time.
Set 3d view shading to rendered.

bug: The mesh in the 3d view is rendered like it was before it was extruded.
Pressing f12 render, updates the mesh data.
Saving after extrude, then reopening the file updates the mesh data. So cant provide a good blend.

Attached: wm_default.blend

Mabey the same as:
http://projects.blender.org/tracker/index.php?func=detail&aid=35964&group_id=9&atid=498
%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bit home premium. Nvidia geforce 9200. - Blender version with error, and version that worked --- Error: blender 2.68RC1 r57908 windows 64 bit. - Short description of error --- 3D view render. mesh data not updated. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Default file. Cube, edit mode, extrude a few time. Set 3d view shading to rendered. bug: The mesh in the 3d view is rendered like it was before it was extruded. Pressing f12 render, updates the mesh data. Saving after extrude, then reopening the file updates the mesh data. So cant provide a good blend. Attached: wm_default.blend Mabey the same as: http://projects.blender.org/tracker/index.php?func=detail&aid=35964&group_id=9&atid=498 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Both cycles and blender internal are not using the edit-mesh result for previewing.

I think this is a limit of the current design (the conversion function could be called here but there may be good reasons its not).

Attached a patch that updates editmesh data for preview rendering.
Assigning to Ton.%%%

%%%Both cycles and blender internal are not using the edit-mesh result for previewing. I think this is a limit of the current design (the conversion function could be called here but there may be good reasons its not). Attached a patch that updates editmesh data for preview rendering. Assigning to Ton.%%%

%%%Thanks for the patch, seems ok to me so committed, and also did the same for cycles now.

Fix in svn revision 58084, thanks for the report.%%%

%%%Thanks for the patch, seems ok to me so committed, and also did the same for cycles now. Fix in svn revision 58084, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%is it possible to make so that in the Sculpt Mode a mesh also updated?%%%

%%%is it possible to make so that in the Sculpt Mode a mesh also updated?%%%

%%%In principle yes, but I fear that with the current code it will give a big sculpting slowdown on large meshes. This wasn't really a bug but since Campbell provided the patch I committed it. I don't consider sculpt not updating a bug.%%%

%%%In principle yes, but I fear that with the current code it will give a big sculpting slowdown on large meshes. This wasn't really a bug but since Campbell provided the patch I committed it. I don't consider sculpt not updating a bug.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35969
No description provided.