Fix #35969: blender internal and cycles not updating mesh while in edit mode. Patch for blender internal made by Campbell.